--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config --runInBand",
     "dev": "nodemon -r dotenv/config src/index.js",
     "start": "node src/index.js"
   },
@@ -22,8 +23,11 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.12.0"
