--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "task-manager",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config --runInBand",
-    "dev": "nodemon -r dotenv/config src/index.js",
-    "start": "node src/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.4.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.4",
-    "validator": "^13.9.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "dotenv": "^16.3.1",
-    "jest": "^29.6.2",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
-  },
-  "engines": {
-    "node": ">=18.12.0"
-  }
+    "name": "task-manager",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config --runInBand",
+        "dev": "nodemon -r dotenv/config src/index.js",
+        "start": "node src/index.js",
+        "lint": "eslint .",
+        "format": "prettier . --write"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@sendgrid/mail": "^7.7.0",
+        "bcryptjs": "^2.4.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.1",
+        "mongodb": "^5.7.0",
+        "mongoose": "^7.4.1",
+        "multer": "^1.4.5-lts.1",
+        "sharp": "^0.32.4",
+        "validator": "^13.9.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.3",
+        "dotenv": "^16.3.1",
+        "eslint": "^8.46.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.9.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "jest": "^29.6.2",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.0",
+        "supertest": "^6.3.3"
+    },
+    "engines": {
+        "node": ">=18.12.0"
+    }
 }
