--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config --runInBand",
         "dev": "nodemon -r dotenv/config src/index.js",
-        "start": "node src/index.js",
+        "start": "node -r dotenv/config src/index.js",
+        "start:prod": "node src/index.js",
         "lint": "eslint .",
         "format": "prettier . --write"
     },
@@ -17,6 +18,7 @@
         "@sendgrid/mail": "^7.7.0",
         "bcryptjs": "^2.4.3",
         "express": "^4.18.2",
+        "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.1",
         "mongodb": "^5.7.0",
         "mongoose": "^7.4.1",
