--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start": "node -r dotenv/config src/index.js",
         "start:prod": "node src/index.js",
         "lint": "eslint .",
-        "format": "prettier . --write"
+        "format": "prettier . --write",
+        "prepare": "husky install"
     },
     "keywords": [],
     "author": "",
@@ -37,7 +38,8 @@
         "jest": "^29.6.2",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.0",
-        "supertest": "^6.3.3"
+        "supertest": "^6.3.3",
+        "husky": "^8.0.0"
     },
     "engines": {
         "node": ">=18.12.0"
